responsive design and animations

--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@
 
     <main>
       <section class="section__discover">
-        <div class="discover-text-box">
-          <h2 class="discover-text-box__heading-main">Discover</h2>
-          <h2 class="discover-text-box__heading-sub">
-            <span class="discover-text-box__heading-sub--1"
-              >Exclusive Vacation</span
-            >
-            <span class="discover-text-box__heading-sub--2">Locations</span>
+        <div class="section-heading discover__header">
+          <h2 class="section-heading__secondary">Discover</h2>
+          <h2 class="section-heading__primary">
+            <span class="section-heading__primary--1">Exclusive Vacation</span>
+            <span class="section-heading__primary--underline">Locations</span>
           </h2>
         </div>
         <div class="discover-cards">
@@ -101,18 +99,22 @@
           </div>
         </div>
 
-        <div class="island-text-box">
-          <h2 class="island-text-box__text">
-            <span class="island-text-box__text--1">Private islands</span
-            ><span class="island-text-box__text--2"> at incredible</span
-            ><span class="island-text-box__text--3"> prices</span>
+        <div class="section-heading island__header">
+          <h2 class="section-heading__primary">
+            <span class="section-heading__primary--1">Private islands</span
+            ><span class="section-heading__primary--2"> at incredible</span
+            ><span
+              class="section-heading__primary--underline section-heading__primary--prices"
+            >
+              prices</span
+            >
           </h2>
         </div>
       </section>
 
       <section class="section__activities">
-        <div class="activities-text-header">
-          <h2 class="activities-text-header__heading">Activities</h2>
+        <div class="section-heading">
+          <h2 class="section-heading__primary--underline">Activities</h2>
         </div>
 
         <div class="activities-gallery">
@@ -146,10 +148,12 @@
       </section>
 
       <section class="section__vacations">
-        <h2 class="vacation__heading">
-          <span class="vacation__heading--highlighted">Official </span>Vacation
-          Photos
-        </h2>
+        <div class="section-heading">
+          <h2 class="section-heading__primary">
+            <span class="section-heading__primary--vacation">Official </span
+            >Vacation Photos
+          </h2>
+        </div>
 
         <div class="vacation-gallery">
           <div class="vacation-gallery__photo vacation-gallery__photo--1">
@@ -174,7 +178,9 @@
       </section>
 
       <section class="section__sponsors">
-        <h2 class="sponsors__heading">Sponsors</h2>
+        <div class="section-heading">
+          <h2 class="section-heading__primary--underline">Sponsors</h2>
+        </div>
 
         <div class="sponsors__box">
           <img
@@ -272,5 +278,7 @@
         <h4>&copy; 2022 Japa.com All rights reserved</h4>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
